INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
include_directories(${Protobuf_INCLUDE_DIRS})
file(GLOB ProtoFiles "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")

set(PROTO_SRC_DIR ${CMAKE_CURRENT_BINARY_DIR})
include_directories(${PROTO_SRC_DIR})
include_directories(${CMAKE_BINARY_DIR}/include)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
protobuf_generate_cpp(ProtoSources ProtoHeaders ${ProtoFiles})
ADD_LIBRARY(proto ${ProtoHeaders} ${ProtoSources})